--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
         <header> 
             <div id="navbar">
                 <ul>
-                    <li><a href="">Main Page</a></li>
-                    <li><a href="">About us</a></li>
-                    <li><a href="">Services</a></li>
-                    <li class="sub"><a href="">Special offers</a>
+                    <li><a href="">Első</a></li>
+                    <li class="sub"><a href="">Második</a>
                         <ul class="submenu">
-                            <li><a href="">Main Page</a></li>
-                            <li><a href="">Main Page</a></li>
-                            <li><a href="">Main Page</a></li>
+                            <li><a href="">Első almenüpont</a></li>
+                            <li><a href="">Második almenüpont</a></li>
+                            <li><a href="">Harmadik almenüpont</a></li>
                         </ul>
                     </li>
-                    <li><a href="">Contact us</a></li>
+                    <li><a href="">Harmadik</a></li>
+                    <li><a href="">Negyedik</a></li>
                 </ul>
             </div>
         </header>
@@ -46,9 +45,9 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis quas praesentium omnis reprehenderit modi fuga nobis similique? Quo fugiat corporis neque beatae suscipit vel dignissimos porro aliquam error expedita magnam eaque, et dolores cumque ipsa nulla quidem eveniet, numquam, fuga nobis animi alias quod ea. Aperiam adipisci obcaecati error necessitatibus fugiat nisi ipsam nostrum quisquam? Nulla, consequuntur minus fugit ullam dolorem, ipsa quis ex mollitia eius vitae laudantium, placeat veniam!</p>
             </div>
         </div>
-        <footer>Lorem ipsum dolor sit amet.</footer>
+        
     </div>
-
+    <footer><p>Cookie szabályzat <span id="ok">Elfogadom</span> </p></footer>
 
 
 
